# clash-royale-player

./: .gitignore  README.md  pyproject.toml  皇室战争自动玩AI-架构规划.md
config/: cards.yaml  layout.yaml
src/crplayer/: __init__.py  cli.py
src/crplayer/capture/: __init__.py  adb.py  base.py  scrcpy.py
src/crplayer/control/: __init__.py  adb_input.py  maatouch.py  scrcpy_control.py
src/crplayer/perception/: __init__.py  cards.py  detector.py  elixir.py  hp.py  layout.py  normalize.py  phase.py  pipeline.py  timer.py
src/crplayer/scene/: __init__.py  controller.py  registry.py  template.py
src/crplayer/state/: __init__.py  schema.py
src/crplayer/ui/: __init__.py  state.py
tests/: test_pipeline.py  test_scene.py
